[package]
name = "klepto"
version = "0.1.2"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "a general purpose extraction and data scraping utility"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/klepto"

[features]
# Enables line/column extraction via proc_macro2 span-locations
span-locations = ["proc-macro2/span-locations"]
# parallel parse/scan
parallel = ["rayon"]
[dependencies]
syn = { version = "2.0.100", features = ["full", "parsing", "visit", "extra-traits"] }
prettyplease = "0.2"

quote = "1"
proc-macro2 = "1"
walkdir = "2"
globset = "0.4"
thiserror = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
cargo_metadata = "0.18"

rayon = { version = "1", optional = true }
